--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=proyecto2025
+application.vendor=leona
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -32,18 +33,15 @@ dist.jar=${dist.dir}/proyecto2025.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/proyecto2025
+endorsed.classpath=
 excludes=
-file.reference.jcalendar-1.4.jar=C:\\Users\\carlo\\Videos\\jcalendar-1.4\\lib\\jcalendar-1.4.jar
 file.reference.jcalendar-1.4.jar-1=lib\\jcalendar-1.4.jar
 file.reference.jgoodies-common-1.2.0.jar=lib\\jgoodies-common-1.2.0.jar
 file.reference.jgoodies-looks-2.4.1.jar=lib\\jgoodies-looks-2.4.1.jar
 file.reference.junit-4.6.jar=lib\\junit-4.6.jar
-file.reference.postgresql-42.7.7.jar=C:\\Users\\carlo\\Downloads\\postgresql-42.7.7.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.jcalendar-1.4.jar}:\
-    ${file.reference.postgresql-42.7.7.jar}:\
     ${file.reference.jcalendar-1.4.jar-1}:\
     ${file.reference.jgoodies-common-1.2.0.jar}:\
     ${file.reference.jgoodies-looks-2.4.1.jar}:\
@@ -57,8 +55,8 @@ javac.modulepath=
 javac.processormodulepath=
 javac.processorpath=\
     ${javac.classpath}
-javac.source=21
-javac.target=21
+javac.source=17
+javac.target=17
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
